--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   image_picker: ^1.2.0
   flutter_localization: ^0.3.3
   flutter_launcher_icons: ^0.14.4
+  firebase_auth: ^6.1.0
 
 dev_dependencies:
   flutter_test:
